[gd_scene load_steps=7 format=1]

[ext_resource path="res://addons/ch.fischspiele.tilesethelper/tilesethelper_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/ch.fischspiele.tilesethelper/images/gui_image_single.png" type="Texture" id=2]
[ext_resource path="res://addons/ch.fischspiele.tilesethelper/icons/icon_collision_polygon_2d.png" type="Texture" id=3]
[ext_resource path="res://addons/ch.fischspiele.tilesethelper/icons/icon_navigation_polygon_instance.png" type="Texture" id=4]
[ext_resource path="res://addons/ch.fischspiele.tilesethelper/icons/icon_light_occluder_2d.png" type="Texture" id=5]
[ext_resource path="res://addons/ch.fischspiele.tilesethelper/scenes/properties.tscn" type="PackedScene" id=6]

[node name="Tileset" type="PanelContainer"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 0, 150 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -58.0
margin/bottom = 460.0
script/script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 7.0
margin/top = 7.0
margin/right = 1075.0
margin/bottom = 143.0
custom_constants/separation = 5
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 218.0
margin/bottom = 136.0
custom_constants/separation = 4
alignment = 1

[node name="HBoxImage" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 5.0
margin/right = 218.0
margin/bottom = 75.0
alignment = 1

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxImage"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 70.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="ImageContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/HBoxImage"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 94.0
margin/bottom = 70.0
use_top_left = false

[node name="btnImage" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxImage/ImageContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 64.0
margin/bottom = 67.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureFrame" type="TextureFrame" parent="HBoxContainer/VBoxContainer/HBoxImage/ImageContainer"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 64.0
margin/bottom = 67.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="VBoxImage" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxImage"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 98.0
margin/top = 0.0
margin/right = 218.0
margin/bottom = 70.0
alignment = 0

[node name="lable" type="Label" parent="HBoxContainer/VBoxContainer/HBoxImage/VBoxImage"]

rect/min_size = Vector2( 45, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 14.0
text = "Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxImage/VBoxImage"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 120.0
margin/bottom = 42.0
alignment = 0

[node name="lblName" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxImage/VBoxImage/name"]

rect/min_size = Vector2( 120, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 24.0
placeholder/alpha = 0.6
align = 1
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="sizeBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxImage/VBoxImage"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 46.0
margin/right = 120.0
margin/bottom = 70.0
alignment = 0

[node name="lblSize" type="Label" parent="HBoxContainer/VBoxContainer/HBoxImage/VBoxImage/sizeBox"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 58.0
margin/bottom = 19.0
text = "Size:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="size" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxImage/VBoxImage/sizeBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 62.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 24.0
text = "64"
placeholder/alpha = 0.6
align = 1
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HBoxImageFrame" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]

editor/display_folded = true
rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 79.0
margin/right = 218.0
margin/bottom = 103.0
alignment = 2

[node name="lblFrom" type="Label" parent="HBoxContainer/VBoxContainer/HBoxImageFrame"]

rect/min_size = Vector2( 70, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 70.0
margin/bottom = 19.0
text = "Frame:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="frame1" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxImageFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 24.0
text = "0"
placeholder/alpha = 0.6
align = 1
max_length = 9
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="lblTo" type="Label" parent="HBoxContainer/VBoxContainer/HBoxImageFrame"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 136.0
margin/top = 5.0
margin/right = 156.0
margin/bottom = 19.0
text = "to"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="frame2" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxImageFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
size_flags/stretch_ratio = 0.0
margin/left = 160.0
margin/top = 0.0
margin/right = 218.0
margin/bottom = 24.0
text = "0"
placeholder/alpha = 0.6
align = 1
max_length = 9
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HBoxFrameOffset" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 107.0
margin/right = 218.0
margin/bottom = 131.0
alignment = 2

[node name="lblFrom" type="Label" parent="HBoxContainer/VBoxContainer/HBoxFrameOffset"]

rect/min_size = Vector2( 70, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 70.0
margin/bottom = 19.0
text = "Offset X:"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XOffset" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxFrameOffset"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 24.0
text = "0"
placeholder/alpha = 0.6
align = 1
max_length = 3
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="lblTo" type="Label" parent="HBoxContainer/VBoxContainer/HBoxFrameOffset"]

rect/min_size = Vector2( 20, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 136.0
margin/top = 5.0
margin/right = 156.0
margin/bottom = 19.0
text = "Y:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="YOffset" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxFrameOffset"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
size_flags/stretch_ratio = 0.0
margin/left = 160.0
margin/top = 0.0
margin/right = 218.0
margin/bottom = 24.0
text = "0"
placeholder/alpha = 0.6
align = 1
max_length = 3
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 223.0
margin/top = 0.0
margin/right = 226.0
margin/bottom = 136.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 231.0
margin/top = 0.0
margin/right = 381.0
margin/bottom = 136.0
custom_constants/separation = 10
alignment = 0

[node name="HBoxCollision" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 30.0
alignment = 0

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer2/HBoxCollision"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 2

[node name="collisionPolygon" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxCollision"]

rect/min_size = Vector2( 100, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Collision"
icon = ExtResource( 3 )
flat = false

[node name="HBoxNavigation" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 150.0
margin/bottom = 70.0
alignment = 0

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer2/HBoxNavigation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 26.0
margin/bottom = 30.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="navigation" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxNavigation"]

rect/min_size = Vector2( 120, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Navigation"
icon = ExtResource( 4 )
flat = false

[node name="HBoxOccluder" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]

rect/min_size = Vector2( 0, 24 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 150.0
margin/bottom = 110.0
alignment = 0

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer2/HBoxOccluder"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 3.0
margin/right = 26.0
margin/bottom = 26.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="occluder" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxOccluder"]

rect/min_size = Vector2( 120, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 30.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Occluder"
icon = ExtResource( 5 )
flat = false

[node name="VSeparator1" type="VSeparator" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 386.0
margin/top = 0.0
margin/right = 389.0
margin/bottom = 136.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 394.0
margin/top = 0.0
margin/right = 574.0
margin/bottom = 136.0
custom_constants/separation = 5
alignment = 0

[node name="HBoxSettings" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3"]

editor/display_folded = true
rect/min_size = Vector2( 0, 33 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 33.0
alignment = 0

[node name="CheckGetPolyColli" type="CheckButton" parent="HBoxContainer/VBoxContainer3/HBoxSettings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 76.0
margin/bottom = 27.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3/HBoxSettings"]

rect/min_size = Vector2( 100, 33 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 80.0
margin/top = 0.0
margin/right = 180.0
margin/bottom = 33.0
text = "copy Polygon
from Collision"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer3"]

rect/min_size = Vector2( 0, 6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 38.0
margin/right = 180.0
margin/bottom = 44.0

[node name="create_tiles" type="Button" parent="HBoxContainer/VBoxContainer3"]

rect/min_size = Vector2( 100, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 40.0
margin/top = 49.0
margin/right = 140.0
margin/bottom = 89.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Create Tile(s)"
flat = false

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 579.0
margin/top = 0.0
margin/right = 582.0
margin/bottom = 136.0

[node name="VBoxProperties" type="VBoxContainer" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 587.0
margin/top = 0.0
margin/right = 1068.0
margin/bottom = 136.0
custom_constants/separation = 2
alignment = 0

[node name="lable" type="Label" parent="HBoxContainer/VBoxProperties"]

visibility/visible = false
rect/min_size = Vector2( 45, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 421.0
margin/bottom = 14.0
text = "Tile Properties:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxProperties"]

visibility/visible = false
rect/min_size = Vector2( 0, 6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 421.0
margin/bottom = 6.0

[node name="properties" parent="HBoxContainer/VBoxProperties" instance=ExtResource( 6 )]

visibility/visible = false
margin/top = 0.0
margin/right = 421.0
margin/bottom = 112.0


